# EpicStaff

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ci  LICENSE  README.md  base_models.py  clear.yml  docker-compose.yaml  downloader.bat  downloader.sh  integration.gitlab-ci.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  success.txt
config/: callables_paths.yaml  example_config.yaml  packages_hash.txt  tools_config.json  tools_config.yaml  tools_paths.json  tools_paths.yaml
db/: chroma.sqlite3
django_app/: .dockerignore  Dockerfile  docker-compose.yaml
docker_tools/: Dockerfile.tool  import_tool.py  run.py  (+3 more)
integration_tests/: docker-compose.yaml  init_project.sh  integration_test.py  pyproject.toml  requirements.txt  run_project.sh  test.py
integration_tests/knowledge_test_files/: test_text.txt
integration_tests/models/: request_models.py
integration_tests/utils/: knowledge_utils.py  utils.py
src/crew/: .dockerignore  Dockerfile.crew  app.py  main.py  pyproject.toml  settings.py
src/crew/callbacks/: session_callback_factory.py
src/crew/celery/: tasks.py
src/crew/config/: settings_config.json  worksheets_config.json
src/crew/fastapi/: app.py
src/crew/fastapi/models/: request_models.py  response_models.py
src/crew/fastapi/services/: crew_parser.py  proxy_tool_factory.py
src/crew/fastapi_app/: app.py
src/crew/fastapi_app/celery_tasks/: tasks.py
src/crew/fastapi_app/models/: request_models.py
src/crew/fastapi_app/services/: container_manager_service.py  crew_parser.py  process_service.py  proxy_tool_factory.py
src/crew/libraries/crewAI/src/crewai/: agent.py  crew.py
src/crew/libraries/crewAI/src/crewai/agents/: crew_agent_executor.py
src/crew/libraries/crewAI/src/crewai/agents/agent_builder/: base_agent.py
src/crew/libraries/crewAI/src/crewai/memory/storage/: local_mem0_storage.py
src/crew/libraries/crewAI/src/crewai/utilities/: logger.py  printer.py
src/crew/libraries/mem0/mem0/memory/: main.py
src/crew/models/: dotdict.py  graph_models.py  request_models.py  response_models.py  state.py
src/crew/services/: container_manager_service.py  crew_parser.py  knowledge_search_service.py  proxy_tool_factory.py  python_code_executor_service.py  redis_service.py  run_crew_service.py
src/crew/services/crew/: crew_parser_service.py  proxy_tool_factory.py
src/crew/services/graph/: custom_message_writer.py  graph_builder.py  graph_session_manager_service.py
src/crew/services/graph/nodes/: __init__.py  base_node.py  crew_node.py  llm_node.py  python_node.py
src/crew/services/graph/subgraphs/: decision_table_node.py
src/crew/services/schema_converter/: converter.py
src/crew/tests/: conftest.py
src/crew/tests/crew_parser_service/: fixtures.py
src/crew/tests/dotdict/: test_dotdict.py  test_map_variables.py  test_set_output_variables.py
src/crew/tests/environment/: test_load_env_from_yaml.py
src/crew/tests/session_result/: fixtures.py  test_session_result.py
src/crew/tests/session_setup/: fixtures.py  test_session_setup.py
src/crew/tools/: file_create_tool.py  file_edit_tool.py  file_line_read_tool.py  route_tool.py
src/crew/utils/: agent_crew_llm.py  exceptions.py  helpers.py  logger.py  map_variables.py  oauth_manager.py  parse_llm.py  set_output_variables.py  tools_hasher.py  tools_llm_config.py  typed_dict_generator.py
src/django_app/: .dockerignore  Dockerfile.dj  entrypoint.sh  pyproject.toml
src/django_app/django_app/: settings.py  urls.py
src/django_app/tables/: admin.py  apps.py  exceptions.py  models.py  request_models.py  urls.py  validators.py
src/django_app/tables/management/commands/: listen_redis.py  upload_models.py
src/django_app/tables/migrations/: 0013_alter_session_options.py
src/django_app/tables/models/: __init__.py  crew_models.py  graph_models.py  knowledge_models.py  llm_models.py  python_models.py  realtime_models.py  session_models.py
src/django_app/tables/serializers/: knowledge_serializers.py  model_serializers.py  nested_model_serializers.py  serializers.py
src/django_app/tables/services/: config_service.py  converter_service.py  crew_runner_service.py  crew_service.py  manager_container_service.py  message_service.py  realtime_service.py  redis_pubsub.py  redis_service.py  registry_container_service.py  session_manager_service.py  session_runner_service.py
src/django_app/tables/utils/: file_text_extractor.py  mixins.py
src/django_app/tables/views/: model_view_sets.py  views.py
src/django_app/tests/: fixtures.py  settings.py
src/django_app/tests/api_tests/: api_test.py  environment_api_test.py  fixtures.py  model_api_test.py  model_api_test_disabled.py  provider_api_test.py  run_session_api_test.py  run_session_publish_start_session_api_test.py  run_session_set_session_data_api_test.py
src/django_app/tests/command_tests/: listen_redis_command_test.py  upload_models_test.py
src/django_app/tests/resources/: session_schema.json
src/django_app/tests/serializer_tests/: tool_config_serializer_test.py
src/django_app/tests/services_tests/session_manager/: create_session_schema_json_test.py
src/django_app/tests/validation_tests/: tool_configuration_validation_test.py
src/django_app/utils/: exception_handler.py  logger.py
src/manager/: Dockerfile.man  app.py  load_config_to_redis.py  pyproject.toml  requirements.txt  tools_config.json  tools_paths.json
src/manager/db/: config.py
src/manager/models/: models.py
src/manager/services/: crew_container_service.py  crew_image_service.py  redis_service.py  tool_container_service.py  tool_image_service.py
src/manager/tests/crew_setup/: fixtures.py  test_crew_setup.py
src/manager/tests/redis/: fixtures.py  test_redis.py
src/manager/tests/tool_container/: fixtures.py  test_import_tool_data_repo.py  test_tool_container_service.py
src/tool/: Dockerfile.tool  app.py  base_models.py  parse_model_data.py  pyproject.toml  tool_factory.py  tools_scanner.py  utils.py
src/tool/models/: models.py
src/tool/tests/: fixtures.py  tools_scanner_test.py
src/tool/tests/utils_tests/: get_tool_data_test.py
(+978 files in other folders)
