[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = "package for integration testing"
authors = ["Maksym Yevstratiev <maksym.yevstratiev@hys-enterprise.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
