[tool.poetry]
name = "crewai-sheets-ui"
version = "0.5.4"
description = "Use Google sheets as UI for CrewAI"
authors = ["yuriwa"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "libraries/crewAI" }
]


[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = { path = "libraries/crewAI" }
crewai-tools = "*"
pandas = "*"
ollama = "*"
langchain-anthropic = "*"
langchain-groq = "*"
langchain-community = ">=0.2"
rich = "*"
sentry-sdk = "*"
open-interpreter = "*"
langgraph = "*"
typing-extensions = "^4.12.2"
pyyaml = "^6.0.2"
python-dotenv = "*"
datamodel-code-generator = "^0.26.0"
redis = "*"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-vcr = "^1.0.2"
fakeredis = "^2.26.1"
polyfactory = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
