[tool.poetry]
name = "django-app"
version = "0.1.0"
description = "backend server"
authors = ["Ihor Orlenko", "Maksym Yevstratiev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
drf-yasg = "^1.21.7"
setuptools = "^75.1.0"
django-filter = "^24.3"
django-cors-headers = "^4.5.0"
redis = "*"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
