[tool.poetry]
name = "manager"
version = "0.1.0"
description = "manager for tools and crew containers"
authors = ["Ihor Orlenko", "Maksym Yevstratiev"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = {extras = ["all"], version = "^0.115.2"}
uvicorn = "^0.32.0"
docker = "^7.1.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
